--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,25 +8,22 @@ dataSources:
     source:
       address: "0x30f938fed5de6e06a9a7cd2ac3517131c317b1e7"
       abi: Contract
+      startBlock: 5876857
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.3
       language: wasm/assemblyscript
       entities:
-        - Donate
-        - DonateAndCreateGiver
-        - EscapeFundsCalled
-        - PaymentAuthorized
-        - PaymentExecuted
-        - PaymentCanceled
-        - SpenderAuthorization
-        - Pause
-        - Unpause
-        - EscapeHatchBlackistedToken
-        - EscapeHatchCalled
-        - OwnershipRequested
-        - OwnershipTransferred
-        - OwnershipRemoved
+        - Donation
+        - DonationAmount
+        - Giver
+        - Token
+        - TokenValue
+        - DonationRecipient
+#        - DonateAndCreateGiver
+#        - EscapeFundsCalled
+#        - EscapeHatchBlackistedToken
+#        - EscapeHatchCalled
       abis:
         - name: Contract
           file: ./abis/Contract.json
@@ -35,28 +32,30 @@ dataSources:
           handler: handleDonate
         - event: DonateAndCreateGiver(address,uint64,address,uint256)
           handler: handleDonateAndCreateGiver
-        - event: EscapeFundsCalled(address,uint256)
-          handler: handleEscapeFundsCalled
-        - event: PaymentAuthorized(uint256,address,uint256,address,bytes32)
-          handler: handlePaymentAuthorized
-        - event: PaymentExecuted(uint256,address,uint256,address)
-          handler: handlePaymentExecuted
-        - event: PaymentCanceled(uint256)
-          handler: handlePaymentCanceled
-        - event: SpenderAuthorization(address,bool)
-          handler: handleSpenderAuthorization
-        - event: Pause()
-          handler: handlePause
-        - event: Unpause()
-          handler: handleUnpause
-        - event: EscapeHatchBlackistedToken(address)
-          handler: handleEscapeHatchBlackistedToken
-        - event: EscapeHatchCalled(address,uint256)
-          handler: handleEscapeHatchCalled
-        - event: OwnershipRequested(address,address)
-          handler: handleOwnershipRequested
-        - event: OwnershipTransferred(address,address)
-          handler: handleOwnershipTransferred
-        - event: OwnershipRemoved()
-          handler: handleOwnershipRemoved
+        - event: GiverAdded(uint64, string)
+          handler: handleGiverAdded
+#        - event: EscapeFundsCalled(address,uint256)
+#          handler: handleEscapeFundsCalled
+#        - event: PaymentAuthorized(uint256,address,uint256,address,bytes32)
+#          handler: handlePaymentAuthorized
+#        - event: PaymentExecuted(uint256,address,uint256,address)
+#          handler: handlePaymentExecuted
+#        - event: PaymentCanceled(uint256)
+#          handler: handlePaymentCanceled
+#        - event: SpenderAuthorization(address,bool)
+#          handler: handleSpenderAuthorization
+#        - event: Pause()
+#          handler: handlePause
+#        - event: Unpause()
+#          handler: handleUnpause
+#        - event: EscapeHatchBlackistedToken(address)
+#          handler: handleEscapeHatchBlackistedToken
+#        - event: EscapeHatchCalled(address,uint256)
+#          handler: handleEscapeHatchCalled
+#        - event: OwnershipRequested(address,address)
+#          handler: handleOwnershipRequested
+#        - event: OwnershipTransferred(address,address)
+#          handler: handleOwnershipTransferred
+#        - event: OwnershipRemoved()
+#          handler: handleOwnershipRemoved
       file: ./src/mapping.ts
